[gd_scene format=3 uid="uid://c0u27aialwqwt"]

[ext_resource type="LabelSettings" uid="uid://cosdrrt3ct7mw" path="res://assets/font/single.tres" id="1_4x245"]
[ext_resource type="Script" uid="uid://bbp443fovwwk5" path="res://right_menu/properties/slider.gd" id="1_574ki"]
[ext_resource type="Theme" uid="uid://4l6wn1knlumi" path="res://right_menu/right_menu_theme.tres" id="2_574ki"]

[node name="slider" type="Control" unique_id=552505619 node_paths=PackedStringArray("line_edit_node", "slider_node", "name_node")]
custom_minimum_size = Vector2(100, 6)
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_574ki")
property_name = "Slider"
line_edit_node = NodePath("ColorRect/LineEdit")
slider_node = NodePath("slider")
name_node = NodePath("name")

[node name="name" type="Label" parent="." unique_id=1601322258]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_left = 4.0
offset_right = 28.0
grow_vertical = 2
text = "property"
label_settings = ExtResource("1_4x245")
vertical_alignment = 1

[node name="ColorRect" type="ColorRect" parent="." unique_id=1556348310]
layout_mode = 0
offset_left = 38.0
offset_right = 63.0
offset_bottom = 6.0
color = Color(0.08627451, 0.11372549, 0.15686275, 1)

[node name="LineEdit" type="LineEdit" parent="ColorRect" unique_id=1419948548]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -3.0
offset_right = 1.0
offset_bottom = 3.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_574ki")
text = "1327.0"
alignment = 1
emoji_menu_enabled = false
flat = true
virtual_keyboard_enabled = false
virtual_keyboard_show_on_focus = false
caret_blink = true
caret_blink_interval = 0.4

[node name="slider" type="HSlider" parent="." unique_id=2145283929]
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -36.0
offset_right = -4.0
grow_horizontal = 0
grow_vertical = 2
theme = ExtResource("2_574ki")
min_value = -1000000000000.0
max_value = 1000000000000.0
value = 0.010009766

[connection signal="focus_exited" from="ColorRect/LineEdit" to="." method="_on_line_edit_focus_exited"]
[connection signal="text_changed" from="ColorRect/LineEdit" to="." method="_on_line_edit_text_changed"]
[connection signal="text_submitted" from="ColorRect/LineEdit" to="." method="_on_line_edit_text_submitted"]
[connection signal="value_changed" from="slider" to="." method="_on_slider_value_changed"]
